--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "homepage": "https://github.com/lerarozhentseva/calculator_innowise",
   "description": "custom calculator for Innowise internship",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
